# summer_practice

./: .replit  README.md  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  runserver.py  schemas.py
