[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "0.100.0"
pydantic = "1.10.10"
requests = "2.31.0"
rocketry = "2.5.1"
sqlalchemy = "2.0.18"
tasks = "^2.8.0"
uvicorn = "0.22.0"
bs4 = "^0.0.1"
annotated-types = "0.5.0"
anyio = "3.7.1"
beautifulsoup4 = "4.12.2"
certifi = "2023.5.7"
charset-normalizer = "3.2.0"
click = "8.1.4"
colorama = "0.4.6"
exceptiongroup = "1.1.2"
greenlet = "2.0.2"
h11 = "0.14.0"
httptools = "0.6.0"
idna = "3.4"
lxml = "4.9.3"
nest-asyncio = "1.5.6"
pydantic-core = "2.1.2"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pyyaml = "6.0"
redbird = "0.5.0"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.4.1"
starlette = "0.27.0"
typing-extensions = "4.7.1"
urllib3 = "2.0.3"
watchfiles = "0.19.0"
websockets = "11.0.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"